--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/428392/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Mon, 29 Nov 2021 16:33:08 UTC
+update_date: Wed, 23 Feb 2022 17:01:58 UTC
 stages:
 - id: 730
   step: 11307
@@ -13,13 +13,13 @@ stages:
   is_completed: true
 - id: 732
   step: 11309
-  is_completed: false
+  is_completed: true
 - id: 733
   step: 11310
-  is_completed: false
+  is_completed: true
 - id: 734
   step: 11311
-  is_completed: false
+  is_completed: true
 topics:
   0:
   - title: IDE
@@ -28,10 +28,12 @@ topics:
     theory_id: 6633
   - title: HyperText Transfer Protocol
     theory_id: 6569
-  - title: HTTP URL
-    theory_id: 6740
+  - title: Introduction to operating systems
+    theory_id: 9704
   - title: HTML basics
     theory_id: 6434
+  - title: HTTP URL
+    theory_id: 6740
   - title: Tags and attributes
     theory_id: 7536
   - title: HTML page structure
@@ -40,14 +42,22 @@ topics:
     theory_id: 7271
   - title: Inline Elements
     theory_id: 7518
+  - title: Introduction to Node.js
+    theory_id: 12691
   - title: Images
     theory_id: 9237
   - title: The lang attribute
     theory_id: 12212
-  - title: WebStorm
-    theory_id: 9492
   - title: Web development
     theory_id: 13931
+  - title: Introduction to JavaScript
+    theory_id: 8016
+  - title: Command line overview
+    theory_id: 8977
+  - title: Parameters and options
+    theory_id: 9746
+  - title: WebStorm
+    theory_id: 9492
   1:
   - title: What is CSS
     theory_id: 7678
@@ -76,40 +86,26 @@ topics:
     theory_id: 7418
   - title: Basic syntax
     theory_id: 7722
-  - title: CSS Selectors
-    theory_id: 7738
   - title: Comments
     theory_id: 7730
-  - title: Google Fonts
-    theory_id: 7844
-  - title: Border
-    theory_id: 8355
-  - title: List style
-    theory_id: 11645
-  - title: Text Alignment
-    theory_id: 11589
-  - title: Absolute units
-    theory_id: 10605
   - title: Relative units
     theory_id: 10671
-  - title: Width and height
-    theory_id: 8325
-  - title: Margin and padding
-    theory_id: 8346
-  - title: line-height
-    theory_id: 11153
+  - title: Absolute units
+    theory_id: 10605
   - title: Position
     theory_id: 11581
-  - title: Positioning Properties
-    theory_id: 8204
   - title: Float
     theory_id: 12697
   - title: Clear
     theory_id: 12705
-  - title: Attribute selectors and universal selector
-    theory_id: 12228
-  - title: Combinators
-    theory_id: 12236
+  - title: Positioning Properties
+    theory_id: 8204
+  - title: Margin and padding
+    theory_id: 8346
+  - title: Width and height
+    theory_id: 8325
+  - title: CSS Selectors
+    theory_id: 7738
   - title: Introduction to Flexbox
     theory_id: 11760
   - title: Orientation and display order
@@ -118,88 +114,84 @@ topics:
     theory_id: 11776
   - title: Axis alignment
     theory_id: 11784
+  - title: Border
+    theory_id: 8355
+  - title: Text Alignment
+    theory_id: 11589
+  - title: line-height
+    theory_id: 11153
+  - title: Google Fonts
+    theory_id: 7844
+  - title: List style
+    theory_id: 11645
   - title: Colors
     theory_id: 7973
   - title: z-index
     theory_id: 11161
   - title: Background
     theory_id: 11670
+  - title: Attribute selectors and universal selector
+    theory_id: 12228
+  - title: Combinators
+    theory_id: 12236
   - title: RGB
     theory_id: 8819
   3:
-  - title: Connecting JS to HTML
-    theory_id: 7510
-  - title: DOM
-    theory_id: 8635
-  - title: HTML forms
-    theory_id: 6560
   - title: Comments
     theory_id: 8170
-  - title: Naming variables
-    theory_id: 8364
   - title: Functions
     theory_id: 8388
   - title: setTimeout and setInterval
     theory_id: 9680
-  - title: DOM methods
-    theory_id: 8662
-  - title: DOM events
-    theory_id: 10857
-  - title: The "addEventListener" method
-    theory_id: 8723
-  - title: ClassList
-    theory_id: 11653
-  - title: Pseudo-classes
-    theory_id: 9762
-  - title: Opacity
-    theory_id: 11169
-  - title: Introduction to Promises
-    theory_id: 9980
-  - title: '"then", "catch" and "finally" methods'
-    theory_id: 9989
+  - title: HTML forms
+    theory_id: 6560
   - title: Anonymous function
     theory_id: 10865
   - title: Arrow functions
     theory_id: 8455
+  - title: DOM
+    theory_id: 8635
   - title: Introduction to animation
     theory_id: 10287
-  - title: JSON
-    theory_id: 6854
-  - title: Introduction to JavaScript
-    theory_id: 8016
+  - title: Opacity
+    theory_id: 11169
+  - title: Connecting JS to HTML
+    theory_id: 7510
+  - title: DOM methods
+    theory_id: 8662
+  - title: ClassList
+    theory_id: 11653
+  - title: Pseudo-classes
+    theory_id: 9762
+  - title: Naming variables
+    theory_id: 8364
   - title: Overview of the basic program
     theory_id: 8154
   - title: Multi-line programs
     theory_id: 8162
-  - title: Variables
-    theory_id: 8186
   - title: Strings and numbers
     theory_id: 8194
-  - title: Boolean and logical operators
-    theory_id: 8471
-  - title: Introduction to Objects
-    theory_id: 8588
   - title: Arithmetic operators
     theory_id: 8372
+  - title: Variables
+    theory_id: 8186
+  - title: Boolean and logical operators
+    theory_id: 8471
+  - title: JSON
+    theory_id: 6854
+  - title: Introduction to Objects
+    theory_id: 8588
   - title: Null and Undefined
     theory_id: 8564
   - title: Type conversion
     theory_id: 8380
   - title: Comparison operators
     theory_id: 8580
-  - title: Conditional operators
-    theory_id: 8889
   4:
-  - title: Introduction to operating systems
-    theory_id: 9704
   - title: Tables
     theory_id: 10832
   - title: Visibility
     theory_id: 10840
-  - title: Command line overview
-    theory_id: 8977
-  - title: Parameters and options
-    theory_id: 9746
   - title: Introduction to Linux
     theory_id: 9526
   - title: Starting with Git
